# dataweb

./: .dockerignore  .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  todos.txt
.github/: dependabot.yml
.github/actions/setup-builder/: action.yaml
.github/workflows/: rust.yml
core/: Cargo.toml
core/migrations/2024-01-07_v0.1/: down.sql  up.sql
core/src/: conf.rs  error.rs  lib.rs  schema.rs
core/src/crud/: data.rs  entity.rs  mappings.rs  mod.rs  query.rs  relay.rs  user.rs  utils.rs
core/src/execute/: map_local.rs  map_remote.rs  mod.rs  parse_utils.rs  planning.rs  result_manager.rs  utils.rs  validation.rs
core/src/execute/data_stores/: file_directory.rs  flight_sql.rs  mod.rs  trino.rs
core/src/messaging/: in_memory.rs  mod.rs  rabbitmq.rs
core/src/model/: access_control.rs  config_obj.rs  entity.rs  mappings.rs  mod.rs  query.rs  relay.rs  user.rs
core/src/model/config_commands/: entity.rs  local_data.rs  local_mapping.rs  mod.rs  relay.rs  remote_mapping.rs  user.rs
core/src/model/data_stores/: mod.rs
core/src/model/data_stores/options/: file_directory.rs  flight_sql.rs  mod.rs  trino.rs
core/src/pki/: mod.rs
deploy/: Dockerfile  Dockerfile.Ballista  Dockerfile.nginx  build_all_debug.sh  build_all_local.sh  build_all_release.sh  build_and_deploy.sh  compose.yaml
deploy/development/apac_data_relay/: configure_apac_data_relay.sh  deploy_apac_data_relay.sh
deploy/development/apac_data_relay/data_modeling/local_data_mappings/: lineitem_mappings.yaml
deploy/development/apac_data_relay/data_modeling/local_data_sources/: trino_tpch.yaml
deploy/development/apac_data_relay/data_modeling/local_entities/: lineitem.yaml
deploy/development/apac_data_relay/data_modeling/remote_data_mappings/: customer_mappings.yaml  lineitem_mappings.yaml  order_mappings.yaml
deploy/development/apac_data_relay/data_modeling/remote_relays/: peers.yaml
deploy/development/emea_data_relay/: configure_emea_data_relay.sh  deploy_emea_data_relay.sh
deploy/development/emea_data_relay/data_modeling/local_data_mappings/: customer_mappings.yaml  lineitem_mappings.yaml  order_mappings.yaml
deploy/development/emea_data_relay/data_modeling/local_data_sources/: trino_tpch.yaml
deploy/development/emea_data_relay/data_modeling/local_entities/: customer.yaml  lineitem.yaml
deploy/development/emea_data_relay/data_modeling/remote_data_mappings/: lineitem_mappings.yaml  order_mappings.yaml
deploy/development/emea_data_relay/data_modeling/remote_relays/: peers.yaml
deploy/development/emea_data_relay/data_modeling/users/: users.yaml
deploy/development/global_data_relay/: configure_global_data_relay.sh  deploy_global_data_relay.sh  nginx.conf
deploy/development/global_data_relay/data_modeling/local_data_mappings/: customer_mappings.yaml  lineitem_mappings.yaml  order_mappings.yaml
deploy/development/global_data_relay/data_modeling/local_data_sources/: trino_tpch.yaml
deploy/development/global_data_relay/data_modeling/local_entities/: customer.yaml  lineitem.yaml  order.yaml
deploy/development/global_data_relay/data_modeling/remote_data_mappings/: customer_mappings.yaml  lineitem_mappings.yaml  order_mappings.yaml
deploy/development/global_data_relay/data_modeling/remote_relays/: peers.yaml
deploy/development/global_data_relay/data_modeling/users/: users.yaml
deploy/development/na_data_relay/: configure_na_data_relay.sh  deploy_na_data_relay.sh
deploy/development/na_data_relay/data_modeling/local_data_mappings/: customer_mappings.yaml  lineitem_mappings.yaml
deploy/development/na_data_relay/data_modeling/local_data_sources/: ballista.yaml  trino_tpch.yaml
deploy/development/na_data_relay/data_modeling/local_entities/: customer.yaml  lineitem.yaml  order.yaml
deploy/development/na_data_relay/data_modeling/remote_data_mappings/: customer_mappings.yaml  lineitem_mappings.yaml  order_mappings.yaml
deploy/development/na_data_relay/data_modeling/remote_relays/: peers.yaml
deploy/development/na_data_relay/data_modeling/users/: users.yaml
deploy/development/na_us_data_relay/: configure_na_us_data_relay.sh  deploy_na_us_data_relay.sh  lineitem.csv
deploy/development/na_us_data_relay/data_modeling/local_data_mappings/: customer_mappings.yaml  lineitem_mappings.yaml  order_mappings.yaml
deploy/development/na_us_data_relay/data_modeling/local_data_sources/: csv_tpch.yaml  trino_tpch.yaml
deploy/development/na_us_data_relay/data_modeling/local_entities/: lineitem.yaml
deploy/development/na_us_data_relay/data_modeling/remote_data_mappings/: customer_mappings.yaml  lineitem_mappings.yaml  order_mappings.yaml
deploy/development/na_us_data_relay/data_modeling/remote_relays/: peers.yaml
deploy/development/na_us_data_relay/data_modeling/users/: users.yaml
flight_server/: Cargo.toml  Dockerfile
flight_server/src/: bin.rs  flight.rs  lib.rs
query_runner/: Cargo.toml  Dockerfile
query_runner/src/: bin.rs  lib.rs
relayctl/: Cargo.toml  Dockerfile
relayctl/src/: main.rs  models.rs  process.rs
rest_server/: Cargo.toml  Dockerfile
rest_server/src/: bin.rs  error.rs  lib.rs  query.rs  utils.rs
rest_server/src/admin/: route.rs  utils.rs
rest_server/src/query/: route.rs  utils.rs
single_binary_deployment/: Cargo.toml  Dockerfile
single_binary_deployment/src/: main.rs
sql-writer/: Cargo.toml  README.md
sql-writer/src/: ast_builder.rs  lib.rs
test/: flight_utils.py  queries.py  rest_utils.py  test_flight.py  test_rest.py  validation.py
webengine/: Cargo.toml  Dockerfile  README.md
webengine/src/: expr_to_sql.rs  lib.rs  main.rs  register.rs  utils.rs  web_source.rs
