[workspace]
members = [
    "core",
    "relayctl",
    "rest_server",
    "query_runner",
    "flight_server",
    "single_binary_deployment",
    "webengine"
]
resolver = "2"

[workspace.package]
rust-version = "1.70"
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
arrow = "47.0.0"
arrow-flight = { version="47.0.0", features = ["flight-sql-experimental"]}
arrow-schema = { version="47.0.0", features = ["serde"]}
arrow-array = "47.0.0"
arrow-json = "47.0.0"
async-trait = "0.1.74"
datafusion = { version = "32.0.0" }
itertools = "0.11.0"
serde = { version="1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = {version = "1.33.0", features=["full"] }
url = "2.4.1"
futures = "0.3.29"
uuid = {version ="1.5.0", features=["serde"] }
tokio-util = "0.7.10"
tokio-stream = {version="0.1.14", features=["io-util"]}
bytes = "1.5.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[profile.release]
codegen-units = 1
lto = true

# the release profile takes a long time to build so we can use this profile during development to save time
# cargo build --profile release-nonlto
[profile.release-nonlto]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
inherits = "release"
lto = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false
