[package]
name = "mesh"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[lib]
name = "mesh"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
arrow-json = { workspace = true }
arrow-flight = { workspace = true }
async-trait = "0.1.77"
datafusion = { workspace = true }
diesel = { version = "2.1.3", features = ["postgres", "serde_json", "uuid"] }
diesel_migrations="2.0.0"
diesel-async = { version="0.4.1", features = ["postgres", "bb8"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_as_jsonb = "1.0.0"
itertools = "0.12.1"
object_store = {version="0.9.1"}
regex = "1.10.2"
serde = { version="1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = {version = "1.33.0", features=["full"] }
url = "2.4.1"
amqprs = {version="1.4", optional=true }
futures = "0.3.29"
uuid = {version ="1.5.0", features=["serde"] }
tokio-util = "0.7.10"
tokio-stream = {version="0.1.14", features=["io-util"]}
bytes = "1.6.0"
rustls = "0.21.8"
sha2 = "0.10.8"
x509-parser = "0.15.1"
rustls-pemfile = "1.0.4"
tonic = {version="0.11.0", features=["tls"] }
http = "0.2.9"
async-channel = {version="2.1.1", optional=true }
prusto = {version="0.5.1", optional=true }
tracing = {workspace = true}
urlencoding = { workspace = true }

[features]
default = ["trino", "datafusion", "async-channel"]
trino = ["dep:prusto"]
datafusion = []
async-channel = ["dep:async-channel"]
rabbitmq = ["dep:amqprs"]
os-aws = ["object_store/aws"]
os-azure = ["object_store/azure"]
os-gcp = ["object_store/gcp"]
