[package]
name = "relayctl"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mesh = {path = "../core"}
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-json = { workspace = true }
async-trait = { workspace = true }
diesel = { version = "2.1.3", features = ["postgres", "serde_json"] }
diesel-async = { version="0.4.1", features = ["postgres"] }
itertools = "0.11.0"
object_store = "0.7.1"
regex = "1.10.2"
serde = { version="1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = {version = "1.33.0", features=["full"] }
url = "2.4.1"
clap = {version="4.4.8", features = ["derive"] }
serde_yaml = "0.9.27"
walkdir = "2.4.0"
sqlparser = { version="0.39.0", features = ["serde"]}
