[package]
name = "rest_server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "rest_server_lib"
path = "src/lib.rs"

[[bin]]
name = "rest_server"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mesh = {path = "../core"}
serde = { version="1.0.189", features = ["derive"] }
serde_json = "1.0.107"
diesel-async = { version="0.4.1", features = ["postgres", "bb8"] }
uuid = {version ="1.5.0", features=["serde"] }
futures = "0.3.29"
arrow = { workspace = true }
datafusion = { workspace = true }
bytes = "1.6.0"
rustls = "0.22.3"
rustls-pemfile = "1.0.4"
actix-tls = { version = "3.1.1", features = ["rustls-0_21"] }
actix-web = { version = "4.4", features = ["rustls-0_21"] }
x509-parser = "0.15.1"
sha2 = "0.10.8"
tracing-subscriber = {workspace = true}
tracing = {workspace = true}
