[package]
name = "data_web_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "data_web_engine"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "47.0.0"
arrow-schema = { version="47.0.0", features=["serde"]}
arrow-flight = { version="47.0.0", features = ["flight-sql-experimental"]}
async-trait = "0.1.74"
datafusion = { version = "32.0.0" }
tonic = { version="0.11.0", features=["tls"] }
futures = "0.3"
bytes = "1.5.0"
tokio = {version = "1.33.0", features=["full"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
uuid = {version ="1.5.0", features=["serde"] }
chrono = "0.4.31"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"


